# EvilTrace

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: mcp.json  settings.json
.claude/hooks/: audit-bash.sh  block-dangerous-commands.sh  post-run-validate.sh  protect-evidence.sh
artifacts/benchmarks/: sample.benchmark.json
artifacts/graphs/: sample.graph.json
artifacts/logs/: sample.agent.jsonl
artifacts/raw/provenance/: sample.provenance.jsonl
artifacts/raw/tool-outputs/: audit-000001.json  audit-000002.json  audit-000002.txt  audit-000003.json  audit-000003.txt  (+2 more)
artifacts/reports/: sample.case.json  sample.findings.json  sample.report.md  sample.run.json  sample.validation.json
data/ground_truth/: nist-data-leakage.expected.json  nist-hacking.expected.json  nitroba.expected.json  sample.expected.json
data/manifests/: nist-data-leakage.manifest.json  nist-hacking.manifest.json  nitroba.manifest.json  sample.manifest.json
docs/: accuracy-report.md  architecture.md  architecture.mmd  compliance-map.md  dataset-documentation.md  demo-script.md  demo-video.md  devpost-submission.md  guardrails.md  limitations.md  project-story.md  try-it-out.md
prompts/: claude_code_build_prompt.md  finding_requirements.md  judge_rules.md  report_writer.md  self_correction_policy.md  system_investigator.md
scripts/: benchmark.sh  build_submission_bundle.sh  install_protocol_sift.sh  install_sift_tools.sh  record_demo_notes.sh  run_case.sh  run_demo_case.sh  setup_sift.sh  validate_submission.sh
src/eviltrace/: __init__.py  cli.py
tests/: conftest.py  test_audit_trail.py  test_benchmark.py  test_command_runner.py  test_finding_validation.py  test_graph.py  test_guardrails.py  test_provenance.py  test_schemas.py  test_self_correction.py
tests/integration/: test_demo_case.py  test_mcp_server.py
(+61 files in other folders)
