[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "eviltrace"
version = "0.1.0"
description = "Self-correcting, evidence-grounded DFIR agent for Protocol SIFT."
readme = "README.md"
# Python 3.10 is the floor so `pip install -e .` works on the SANS SIFT Workstation
# (Ubuntu 22.04 ships Python 3.10). EvilTrace's own code is 3.9-safe; the 3.10 floor comes
# from the `mcp` SDK. The reference orchestrator (`eviltrace run`) imports `mcp` only lazily.
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "EvilTrace Contributors" }
]
dependencies = [
  "typer>=0.12",
  "mcp>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.22"
]

[project.scripts]
eviltrace = "eviltrace.cli:main"
eviltrace-mcp = "eviltrace.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eviltrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

